Build: Link tfm_sprt to tfm_spm
The tfm_spm references the tfm_flih_func_return function in tfm_sprt.
In most cases, the linking (in CMake) is done implicitly and correctly.
But in some corner cases, the function symbol is removed before linking
tfm_spm, for example when building musca-b1 SSE-200 with
FORWARD_PROT_MSG=ON by GNU ARM compiler.

This patch explicitly links tfm_sprt to tfm_spm to solve this issue.

Change-Id: Ib46ac6eb02cfe5165e02fdea125c7f18558f38cf
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -97,6 +97,7 @@ target_link_libraries(tfm_spm
         $<$<STREQUAL:${TEST_PSA_API},IPC>:tfm_app_rot_partition_client_partition>
         $<$<STREQUAL:${TEST_PSA_API},IPC>:tfm_app_rot_partition_server_partition>
         tfm_fih
+        tfm_sprt
 )
 
 target_compile_definitions(tfm_spm
