SPM: Add FPU support for gnu arm embedded toolchain
1. Enable FP support in SPE by CONFIG_TFM_SPE_FP (0:software, 1:hybird,
   2:hardware) for IPC model.
   It doesn't support LIBRARY model.
2. Enable lazy stacking from SPE by CONFIG_TFM_LAZY_STACKING_SPE (OFF,
   ON).
3. Separate qcbor, t_cose for SPE and NSPE.

Note:
   NSPE is not allowed to use FPU at current stage when FPU is enabled
   for SPE.

Change-Id: I856fdcccbbc403c5ec3689d95df4d082f106ff47
Signed-off-by: Feder Liang <Feder.Liang@arm.com>

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -104,6 +104,21 @@ if(BL2)
             $<$<C_COMPILER_ID:GNU>:-Wno-unused-parameter>
             $<$<C_COMPILER_ID:ARMClang>:-Wno-unused-parameter>
     )
+
+    target_compile_options(bl2_cc312
+        PRIVATE
+            ${BL2_COMPILER_CP_FLAG}
+    )
+
+    target_compile_options(bl2_crypto_hw
+        PRIVATE
+            ${BL2_COMPILER_CP_FLAG}
+    )
+
+    target_compile_options(cc312_cdmpu
+        INTERFACE
+            ${BL2_COMPILER_CP_FLAG}
+    )
 endif()
 
 ############################ Crypto Service ####################################
