CC312: Add a build option for PSA Driver API
Add an option in the CC312 CMakelists file to enable
the build of the PSA Unified Driver API sources. Set
the option only when building for the Crypto service
while BL2 does not use the interface. Also, remove a
TODO introduced in the driver code previously.

Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: I6b012d193a9b2804b356eda8008c8886e4d9e10a

--- a/lib/ext/cryptocell-312-runtime/CMakeLists.txt
+++ b/lib/ext/cryptocell-312-runtime/CMakeLists.txt
@@ -22,6 +22,13 @@ if (NOT DEFINED CC312_CDMPU_TARGET)
     set(CC312_CDMPU_TARGET cc312_cdmpu)
 endif()
 
+# Controls whether to build the PSA Crypto Unified Driver interface
+if (NOT DEFINED BUILD_PSA_DRIVER_API)
+    set(BUILD_PSA_DRIVER_API True)
+endif()
+message(STATUS
+    "${CC312_LIB_TARGET} has BUILD_PSA_DRIVER_API: ${BUILD_PSA_DRIVER_API}")
+
 add_library(${CC312_LIB_TARGET} STATIC)
 # The extra libraries don't change much, so if we've already got one just ignore
 # it. it's still possible to create multiple targets by altering the name
