Crypto: Move key management functions into crypto_key_management.c
Move key management functions into crypto_key_management.c to align
with psa crypto spec 1.0.

Signed-off-by: Summer Qin <summer.qin@arm.com>
Change-Id: Id32ebdb8ba777f97544ffdbe45e1a4271a103883

--- a/secure_fw/partitions/crypto/CMakeLists.txt
+++ b/secure_fw/partitions/crypto/CMakeLists.txt
@@ -25,6 +25,7 @@ target_sources(tfm_psa_rot_partition_crypto
         crypto_aead.c
         crypto_asymmetric.c
         crypto_key_derivation.c
+        crypto_key_management.c
         crypto_rng.c
 )
 
