--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -160,6 +160,9 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
         {% if manifest.psa_framework_version > 1.0 and service.connection_based is sameas false %}
                                     | SERVICE_FLAG_STATELESS | 0x{{"%x"|format(service.stateless_handle_index)}}
         {% endif %}
+        {% if manifest.psa_framework_version > 1.0 and service.mm_iovec == "enable" %}
+                                    | SERVICE_FLAG_MM_IOVEC
+        {% endif %}
         {% if service.version_policy %}
                                     | SERVICE_VERSION_POLICY_{{service.version_policy}},
         {% else %}
