Dualcpu: Generate tfm_mailbox_config.h to build folder
tfm_mailbox_config.h is generated to source code folder. Git will keep
notifying developers to add this new file if developers build TF-M in
the source code folder.

Make tfm_mailbox_config.h to be generated in build folder instead.

Change-Id: I522228bef6329ae1ea1f3b918f54d8214d6f3664
Signed-off-by: David Hu <david.hu@arm.com>

--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -64,7 +64,7 @@ target_sources(tfm_secure_api
 
 if (TFM_MULTI_CORE_TOPOLOGY OR FORWARD_PROT_MSG)
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/multi_core/tfm_mailbox_config.h.in
-                   ${CMAKE_CURRENT_SOURCE_DIR}/include/multi_core/tfm_mailbox_config.h
+                   ${CMAKE_BINARY_DIR}/generated/interface/include/tfm_mailbox_config.h
                    NEWLINE_STYLE UNIX
     )
 endif()
