platform: Fix GNUARM common linker file.
Since SPM uses main stack for initialization, __stack provided for
GNUARM libc init is ARM_LIB_STACK.

Change-Id: I83e71200154ee7e22a1b43f227abcacd3317fdef
Signed-off-by: Michel Jaouen <michel.jaouen@st.com>

--- a/platform/ext/common/gcc/tfm_isolation_l3.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_l3.ld.template
@@ -532,5 +532,5 @@ SECTIONS
     Load$$LR$$LR_SECONDARY_PARTITION$$Base = SECONDARY_PARTITION_START;
 #endif /* BL2 */
 
-    PROVIDE(__stack = Image$$ER_INITIAL_PSP$$ZI$$Limit);
+    PROVIDE(__stack = Image$$ARM_LIB_STACK$$ZI$$Limit);
 }
