CC312: Use Mbed TLS fork with hardcoded entry points
Signed-off-by: Abbas Bracken Ziad <abbas.brackenziad@arm.com>
Change-Id: I34abd774040a0832ecb406472e1fb8ff7274d3c7

--- a/lib/ext/mbedcrypto/CMakeLists.txt
+++ b/lib/ext/mbedcrypto/CMakeLists.txt
@@ -15,7 +15,8 @@ endif()
 
 if ("${MBEDCRYPTO_PATH}" STREQUAL "DOWNLOAD")
     find_package(Git)
-    file(GLOB PATCH_FILES *.patch)
+    # Workaround: DON'T PATCH REPO
+    # file(GLOB PATCH_FILES *.patch)
 
     if (PATCH_FILES)
         FetchContent_Declare(mbedcrypto
