SPM: Rename 'SPM_PART_FLAG_IPC'
This definition was a legacy naming inside SPM, now
functionality `load` is a standalone module, and this
definition is referenced by `load`. Apply a renaming
(`PARTITION_MODEL_IPC`) to make it align with other
`load` definitions.

Change-Id: I8eb5e9cd76ae2f79218fcc6898a8c194d6fd89da
Signed-off-by: Ken Liu <Ken.Liu@arm.com>

--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -111,7 +111,7 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
         .pid                        = {{manifest.name}},
         .flags                      = 0
 {% if (manifest.psa_framework_version == 1.1 and manifest.model == "IPC") or manifest.psa_framework_version == 1.0 %}
-                                    | SPM_PART_FLAG_IPC
+                                    | PARTITION_MODEL_IPC
 {% endif %}
 {% if manifest.type == "PSA-ROT" %}
                                     | SPM_PART_FLAG_PSA_ROT
