Build: Add support for using target arch only
Add the ability to specify only target architecture without setting
target CPU. This commit adds support for GCC and ARMCLANG only.

For Armclang, set architecture is now checked against available arch
targets instead of processors. Modifiers (nodsp, nofp, nomve) is now
propagated to CMAKE_C_FLAGS in -march.

Use TFM_SYSTEM_ARCHITECTURE in CMakeListst.txt instead of previous
CMAKE_SYSTEM_ARCHITECTURE, which is not a CMAKE variable, to reduce
possible confusion with CMAKE_SYSTEM_ARCH which is a CMAKE variable
for Armclang.

Change-Id: If86e7ee82172374fb729f3e51ddfc411b7dd651e
Signed-off-by: Gabor Abonyi <gabor.abonyi@arm.com>

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -69,7 +69,7 @@ target_compile_definitions(bl2_mbedcrypto_config
         $<$<STREQUAL:${MCUBOOT_SIGNATURE_TYPE},RSA>:MCUBOOT_SIGN_RSA_LEN=${MCUBOOT_SIGNATURE_KEY_LEN}>
         MBEDTLS_CONFIG_FILE="${MCUBOOT_MBEDCRYPTO_CONFIG_FILEPATH}"
         # Workaround for https://github.com/ARMmbed/mbedtls/issues/1077
-        $<$<OR:$<STREQUAL:${CMAKE_SYSTEM_ARCHITECTURE},armv8-m.base>,$<STREQUAL:${CMAKE_SYSTEM_ARCHITECTURE},armv6-m>>:MULADDC_CANNOT_USE_R7>
+        $<$<OR:$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv8-m.base>,$<STREQUAL:${TFM_SYSTEM_ARCHITECTURE},armv6-m>>:MULADDC_CANNOT_USE_R7>
 )
 
 cmake_policy(SET CMP0079 NEW)
