Platform: Fix build warning
Add a header file of 'tfm_strnlen.h', and rename 'strnlen' to
'tfm_strnlen', fix the warning about implicit declaration of
function 'strnlen'.

Change-Id: I3f59d7bba5fc425c724537e53d33cc6325d1f60a
Signed-off-by: Shawn Shan <Shawn.Shan@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -73,6 +73,7 @@ target_link_libraries(platform_s
         tfm_secure_api
         tfm_arch
         tfm_partition_defs
+        $<$<BOOL:${PLATFORM_DEFAULT_ATTEST_HAL}>:tfm_sprt>
         $<$<AND:$<BOOL:${TFM_PARTITION_CRYPTO}>,$<BOOL:${PLATFORM_DEFAULT_CRYPTO_KEYS}>>:crypto_service_mbedtls>
 )
 
