docs: Decouple documentation build from the main
 - Documentation is a standalone CMake project in /docs
 - Exclude TFM_VERSION to a dedicated version.cmake file
 - Move /doxygen into /docs folder
 - Adjust documentation for building documentation :)
 - Suppress warnings of PythonModules mismatch in docs build

Signed-off-by: Anton Komlev <anton.komlev@arm.com>
Change-Id: I726dc17d9aa547b8faaf35564e21f25aa9c207a9

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@
 
 cmake_minimum_required(VERSION 3.15)
 
-set(TFM_VERSION 1.4.0)
+include(version.cmake)
 
 ############################ CONFIGURATION #####################################
 
@@ -93,7 +93,6 @@ endif()
 add_subdirectory(lib/ext)
 add_subdirectory(lib/fih)
 add_subdirectory(tools)
-add_subdirectory(docs)
 if(NS)
     # Set to ${TFM_TEST_REPO_PATH}/app by default
     add_subdirectory(${TFM_APP_PATH} ${CMAKE_CURRENT_BINARY_DIR}/app)
