platform: OTP: Add writeable option to otp template
The writeable is introduced for platform not supporting writeable OTP.
This platform can provision data in flash area during product download
and enables a write protection on this area after download. The
platform not supporting writeable OTP are forced to implement their
specific anti-roll back counter, and cannot use dummy provisionning.

Change-Id: I23a06c8170c1da25bf18a499d54f1ca7e674c432
Signed-off-by: Michel Jaouen <michel.jaouen@st.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -90,6 +90,7 @@ target_compile_definitions(platform_s
         $<$<BOOL:${ATTEST_INCLUDE_COSE_KEY_ID}>:ATTEST_INCLUDE_COSE_KEY_ID>
         $<$<BOOL:${PLATFORM_DEFAULT_NV_COUNTERS}>:PLATFORM_DEFAULT_NV_COUNTERS>
         $<$<BOOL:${PLATFORM_DEFAULT_OTP}>:PLATFORM_DEFAULT_OTP>
+        $<$<BOOL:${PLATFORM_DEFAULT_OTP_WRITEABLE}>:OTP_WRITEABLE>
 )
 
 #========================= Platform Non-Secure ================================#
@@ -153,6 +154,7 @@ if(BL2)
             $<$<BOOL:${TFM_DUMMY_PROVISIONING}>:TFM_DUMMY_PROVISIONING>
             $<$<BOOL:${ATTEST_INCLUDE_COSE_KEY_ID}>:ATTEST_INCLUDE_COSE_KEY_ID>
             $<$<BOOL:${PLATFORM_DEFAULT_NV_COUNTERS}>:PLATFORM_DEFAULT_NV_COUNTERS>
+            $<$<BOOL:${PLATFORM_DEFAULT_OTP_WRITEABLE}>:OTP_WRITEABLE>
         )
 endif()
 
