--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -92,11 +92,22 @@ target_link_libraries(tfm_secure_api
 )
 
 set_source_files_properties(
-    ${CMAKE_SOURCE_DIR}/interface/src/psa/psa_client.c
-    ${CMAKE_SOURCE_DIR}/interface/src/psa/psa_service.c
+    ${CMAKE_SOURCE_DIR}/secure_fw/spm/cmsis_psa/psa_interface_svc.c
     PROPERTIES
     COMPILE_FLAGS $<$<C_COMPILER_ID:GNU>:-Wno-unused-parameter>
     COMPILE_FLAGS $<$<C_COMPILER_ID:ARMClang>:-Wno-unused-parameter>
+)
+
+# Secure component relies on 'tfm_secure_api', append headers/sources
+# into this target, also the SPE build indicator.
+target_sources(tfm_secure_api
+    INTERFACE
+        $<$<BOOL:${TFM_PSA_API}>:${CMAKE_SOURCE_DIR}/secure_fw/spm/cmsis_psa/psa_interface_svc.c>
+)
+
+target_compile_definitions(tfm_secure_api
+    INTERFACE
+        CONFIG_TFM_BUILDING_SPE=1
 )
 
 ############################# Secure veneers ###################################
