docs: Upgrade documentation tools
Signed-off-by: Anton Komlev <anton.komlev@arm.com>
Change-Id: Iaa12abed9f34017025e17c1bfc7df8f45c12ac13

--- a/tools/requirements_docs.txt
+++ b/tools/requirements_docs.txt
@@ -1,10 +1,10 @@
 graphviz
-Jinja2>=2.10.3
+Jinja2>=3.0.2
 latex
-Sphinx==2.0.1
-m2r
-sphinx-rtd-theme
-sphinxcontrib-plantuml
-sphinxcontrib-svg2pdfconverter
-sphinx-tabs==1.1.13
+Sphinx==4.2.0
+m2r2
+sphinx-rtd-theme>=1.0.0
+sphinxcontrib-plantuml==0.22
+sphinxcontrib-svg2pdfconverter==1.1.1
+sphinx-tabs==3.2.0
 docutils==0.16
