--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -15,7 +15,7 @@
       "name": "Protected Storage Service",
       "short_name": "TFM_SP_PS",
       "manifest": "secure_fw/partitions/protected_storage/tfm_protected_storage.yaml",
-      "conditional": "TFM_PARTITION_PROTECTED_STORAGE",
+      "conditional": "@TFM_PARTITION_PROTECTED_STORAGE@",
       "version_major": 0,
       "version_minor": 1,
       "pid": 256,
@@ -29,7 +29,7 @@
       "name": "TF-M Internal Trusted Storage Service",
       "short_name": "TFM_SP_ITS",
       "manifest": "secure_fw/partitions/internal_trusted_storage/tfm_internal_trusted_storage.yaml",
-      "conditional": "TFM_PARTITION_INTERNAL_TRUSTED_STORAGE",
+      "conditional": "@TFM_PARTITION_INTERNAL_TRUSTED_STORAGE@",
       "version_major": 0,
       "version_minor": 1,
       "pid": 257,
@@ -43,7 +43,7 @@
       "name": "TFM Audit Log Service",
       "short_name": "TFM_SP_AUDIT_LOG",
       "manifest": "secure_fw/partitions/audit_logging/tfm_audit_logging.yaml",
-      "conditional": "TFM_PARTITION_AUDIT_LOG",
+      "conditional": "@TFM_PARTITION_AUDIT_LOG@",
       "version_major": 0,
       "version_minor": 1,
       "pid": 258,
@@ -57,7 +57,7 @@
       "name": "TFM Crypto Service",
       "short_name": "TFM_SP_CRYPTO",
       "manifest": "secure_fw/partitions/crypto/tfm_crypto.yaml",
-      "conditional": "TFM_PARTITION_CRYPTO",
+      "conditional": "@TFM_PARTITION_CRYPTO@",
       "version_major": 0,
       "version_minor": 1,
       "pid": 259,
@@ -71,7 +71,7 @@
       "name": "TFM Platform Service",
       "short_name": "TFM_SP_PLATFORM",
       "manifest": "secure_fw/partitions/platform/tfm_platform.yaml",
-      "conditional": "TFM_PARTITION_PLATFORM",
+      "conditional": "@TFM_PARTITION_PLATFORM@",
       "version_major": 0,
       "version_minor": 1,
       "pid": 260,
@@ -85,7 +85,7 @@
       "name": "TFM Initial Attestation Service",
       "short_name": "TFM_SP_INITIAL_ATTESTATION",
       "manifest": "secure_fw/partitions/initial_attestation/tfm_initial_attestation.yaml",
-      "conditional": "TFM_PARTITION_INITIAL_ATTESTATION",
+      "conditional": "@TFM_PARTITION_INITIAL_ATTESTATION@",
       "version_major": 0,
       "version_minor": 1,
       "pid": 261,
@@ -99,7 +99,7 @@
       "name": "TFM Firmware Update Service",
       "short_name": "TFM_SP_FWU",
       "manifest": "secure_fw/partitions/firmware_update/tfm_firmware_update.yaml",
-      "conditional": "TFM_PARTITION_FIRMWARE_UPDATE",
+      "conditional": "@TFM_PARTITION_FIRMWARE_UPDATE@",
       "version_major": 0,
       "version_minor": 1,
       "pid": 271,
