Build: Fix library model build warnings
There are some redefination warnings when building TF_M library model.
This patch made the following changes:

- Rename "SPM_PART_FLAG_PSA_ROT" to "PARTITION_MODEL_PSA_ROT".
- Move "TFM_PARTITION_UNPRIVILEGED_MODE" and
  "TFM_PARTITION_PRIVILEGED_MODE" from partition_define.h to spm_ipc.h.

Change-Id: I2b40fdfe8c1578ca3d08145d3b834c37859efb87
Signed-off-by: Shawn Shan <Shawn.Shan@arm.com>

--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -114,7 +114,7 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
                                     | PARTITION_MODEL_IPC
 {% endif %}
 {% if manifest.type == "PSA-ROT" %}
-                                    | SPM_PART_FLAG_PSA_ROT
+                                    | PARTITION_MODEL_PSA_ROT
 {% elif manifest.type != "APPLICATION-ROT" %}
 #error "Unsupported type '{{manifest.type}}' for partition '{{manifest.name}}'!"
 {% endif %}
