Build: Fixes on target names and dependencies
Do not set mbedTLS target names explictly but just
use the MBEDTLS_TARGET_PREFIX variable. Also, enforce
depedency in BL2 between platform (boot_hal) and the
bl2_crypto_hw target which is missed currently.

Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: I9300d2eca775f0027889937822aff271537c6b29

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -83,10 +83,7 @@ set(ENABLE_DOCS OFF)
 set(INSTALL_MBEDTLS_HEADERS OFF)
 set(LIB_INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/mbedcrypto/install)
 
-set(lib_target bl2_mbedcrypto_libs)
-set(mbedcrypto_target bl2_mbedcrypto)
-set(mbedtls_target bl2_mbedtls)
-set(mbedx509_target bl2_mbedx509)
+# Set the prefix to be used by mbedTLS targets
 set(MBEDTLS_TARGET_PREFIX bl2_)
 
 # Mbedcrypto is quite a large lib, and it uses too much memory for it to be
