Build: Propagate correct flags to crypto related libraries
Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: Ib53e977d40e17b3f7cc80b64139f6347a33cd785

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -65,6 +65,7 @@ add_library(bl2_mbedcrypto_config INTERFACE)
 
 target_compile_definitions(bl2_mbedcrypto_config
     INTERFACE
+        BUILD_PSA_DRIVER_API=False
         $<$<STREQUAL:${MCUBOOT_SIGNATURE_TYPE},RSA>:MCUBOOT_SIGN_RSA>
         $<$<STREQUAL:${MCUBOOT_SIGNATURE_TYPE},RSA>:MCUBOOT_SIGN_RSA_LEN=${MCUBOOT_SIGNATURE_KEY_LEN}>
         MBEDTLS_CONFIG_FILE="${MCUBOOT_MBEDCRYPTO_CONFIG_FILEPATH}"
