--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -56,11 +56,11 @@ if(BL2)
     )
 
     set(CC312_LIB_TARGET bl2_cc312)
-    # BL2 does not use the PSA Crypto APIs so no need to build the PSA Driver API interface
-    set(BUILD_PSA_DRIVER_API False)
     set(SAVED_BUILD_TYPE ${CMAKE_BUILD_TYPE})
     set(CMAKE_BUILD_TYPE ${MBEDCRYPTO_BUILD_TYPE})
+    set(BUILD_PSA_DRIVER_API False)
     add_subdirectory(${CC312_PATH} ${CMAKE_CURRENT_BINARY_DIR}/bl2_cc312)
+    unset(BUILD_PSA_DRIVER_API)
     set(CMAKE_BUILD_TYPE ${SAVED_BUILD_TYPE} CACHE STRING "Build type: [Debug, Release, RelWithDebInfo, MinSizeRel]" FORCE)
 
     target_sources(bl2_cc312
@@ -130,7 +130,6 @@ target_link_libraries(crypto_service_crypto_hw
 )
 
 set(CC312_LIB_TARGET crypto_service_cc312)
-set(BUILD_PSA_DRIVER_API True)
 set(SAVED_BUILD_TYPE ${CMAKE_BUILD_TYPE})
 set(CMAKE_BUILD_TYPE ${MBEDCRYPTO_BUILD_TYPE})
 add_subdirectory(${CC312_PATH} ${CMAKE_CURRENT_BINARY_DIR}/crypto_service_cc312)
