CC3XX: Create an util file for Hash
Create an utility source file for hash module due to
the fact that the CC to PSA hash mode conversion function
needs to be used by other modules of the driver.

Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: If84b434f21d0d35487950e119155a3744e3689bd

--- a/lib/ext/cryptocell-312-runtime/codesafe/src/psa_driver_api/CMakeLists.txt
+++ b/lib/ext/cryptocell-312-runtime/codesafe/src/psa_driver_api/CMakeLists.txt
@@ -26,7 +26,7 @@ target_sources(${CC312_LIB_TARGET}
         src/cc3xx_psa_asymmetric_signature.c
         src/cc3xx_psa_key_generation.c
         src/cc3xx_internal_drbg_util.c
-
+        src/cc3xx_internal_hash_util.c
         src/cc3xx_internal_aes.c
         src/cc3xx_internal_chacha20.c
         src/cc3xx_internal_ecdh.c
