platform: add secure debug public key to the otp
The commit adds secure debug public key hash to the OTP
layout. The commit provides the implementation of reading
and writing the key from cc312 based OTP backend.

Change-Id: Ic130aa9a301c79d49d61ae3b2e7162772de17893
Signed-off-by: Satish Kumar <satish.kumar01@arm.com>

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -51,6 +51,7 @@ target_link_options(bl2
 target_compile_definitions(bl2
     PRIVATE
         $<$<BOOL:${DEFAULT_MCUBOOT_FLASH_MAP}>:DEFAULT_MCUBOOT_FLASH_MAP>
+        $<$<BOOL:${PLATFORM_PSA_ADAC_SECURE_DEBUG}>:PLATFORM_PSA_ADAC_SECURE_DEBUG>
 )
 
 add_convert_to_bin_target(bl2)
